# sokobanitron

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.githooks/: pre-commit
android-client/: .gitignore  settings.gradle.kts
android-client/app/: .gitignore  build.gradle.kts
android-client/gradle/: libs.versions.toml
app/: build.gradle.kts
archived/android-client/: .gitignore  settings.gradle.kts
desktop-client/: Cargo.toml
desktop-client/src/: app_driver.rs  display.rs  main.rs
docs/: android-performance-notes.md  kindle-interface-notes.md  kotlin-vs-rust-gameplay-rendering-notes.md  renderer-color-inventory.md  rust-animation-refactor-plan.md
game-engine/: Cargo.toml
game-engine/src/: engine.rs  jni_bridge.rs  jni_codec.rs  registry.rs
gameplay/: Cargo.toml
gameplay/src/: level.rs  lib.rs  session.rs
gradle/: libs.versions.toml
kindle-client/: Cargo.toml  README.md  run-kindle.sh  stop-kindle.sh
kindle-client/.cargo/: config.toml
kindle-client/src/: app.rs  app_driver.rs  config.rs  display.rs  level.rs  main.rs  platform.rs  preferences.rs  ui.rs
kindle-client/src/platform/: display.rs  power.rs  touch.rs
renderer/: Cargo.toml
renderer/src/: background.rs  entities.rs  lib.rs  overlay.rs  pixels.rs  tiles.rs  trail.rs  viewport.rs
scripts/: build_android_jni_device.sh  launch_android.sh
scripts/kindle/: observe-sleep.sh  run-kindle.sh  stop-kindle.sh
sokobanitron-android-jni/: Cargo.toml
sokobanitron-android-jni/src/: jni_bridge.rs  lib.rs  native_window.rs  registry.rs  runtime.rs
sokobanitron-app/: Cargo.toml
sokobanitron-app/src/: action.rs  app_state.rs  driver.rs  editor_ui.rs  frame.rs  gameplay_frames.rs  gameplay_input.rs  input.rs  level_bootstrap.rs  lib.rs  menu.rs  overlay.rs  pointer.rs  preferences.rs  present.rs  presentation_profile.rs  reducer.rs  ui_state.rs
sokobanitron-app/src/app/: action.rs  driver.rs  input.rs  mod.rs  persistence.rs  presentation.rs  reducer.rs  state.rs
sokobanitron-app/src/editor/: frame.rs  hit_test.rs  input.rs  mod.rs  paint_mode.rs  view.rs
sokobanitron-app/src/editor_ui/: frame.rs  input.rs  view.rs
sokobanitron-app/src/gameplay/: frame.rs  input.rs  mod.rs  state.rs  view.rs
sokobanitron-app/src/persistence/: bootstrap.rs  import.rs  mod.rs  normalize.rs  schema.rs  slc.rs  solution.rs  store.rs  tests.rs
sokobanitron-app/src/shared/: pointer.rs
sokobanitron-core/: Cargo.toml
sokobanitron-core/benches/: box_pathfinder.rs  canonical_pipeline.rs  normalize_build_grid_prune_immovable.rs  pathfinder.rs  player_pathfinder.rs  solution_validator.rs
sokobanitron-core/benches/fixtures/: normalized_puzzles.db  puzzles.db
sokobanitron-core/benches/fixtures/box_pathfinder/: l5.txt  micro94.txt  misc19.txt  misc22.txt  sas27.txt
sokobanitron-core/src/: box_pathfinder.rs  canonical_hash.rs  error.rs  grid.rs  lib.rs  mask_to_player_reachable.rs  normalize_leading_indentation_with_walls.rs  normalize_to_walkable_region.rs  pathfinder.rs  prune_dead_end_floors.rs  prune_immovable_boxes_on_goals.rs  rectangularize_with_walls.rs  stage_profile.rs  trim_outer_walls.rs
sokobanitron-core/src/api/: canonical_hash.rs  mod.rs  normalize.rs
sokobanitron-core/src/canonical/: hash.rs  mod.rs  player_canonicalization.rs  symmetry.rs
sokobanitron-core/src/grid/: grid.rs  invariants.rs  mod.rs  validation.rs
sokobanitron-core/src/normalize/: build_grid.rs  dead_end.rs  immovable_boxes.rs  immovable_goals.rs  leading_indentation.rs  mod.rs  pipeline.rs  reachable.rs  rectangularize.rs  trim_outer.rs
sokobanitron-core/src/optimizer/: mod.rs  model.rs  passes.rs  replay_reverse.rs
sokobanitron-core/src/pathfinder/: box.rs  mod.rs  player.rs  position.rs  pull.rs  stats.rs  world_grid.rs
sokobanitron-core/src/solution/: mod.rs  validate.rs
sokobanitron-core/src/util/: mod.rs  stage_profile.rs
sokobanitron-core/tests/: box_pathfinder.rs  canonical_hash_regression.rs  pathfinder.rs  player_pathfinder.rs
sokobanitron-gameplay/: Cargo.toml
sokobanitron-level-creator/: Cargo.toml
sokobanitron-level-creator/src/: app.rs  constants.rs  lib.rs  session.rs  ui.rs  world.rs
sokobanitron-level-editor/: Cargo.toml
sokobanitron-presentation/: Cargo.toml
sokobanitron-renderer/: Cargo.toml
sokobanitron-renderer/src/: controls.rs  editor_screen.rs  entities.rs  gameplay_tap.rs  icons.rs  level_select_scrollbar.rs  lib.rs  menu.rs  overlay.rs  overlay_chrome.rs  pixel_ui.rs  screen_requests.rs  tiles.rs  trail.rs  viewport.rs
(+266 files in other folders)
