[package]
name = "kindle-client"
version = "0.1.0"
edition = "2024"

[dependencies]
presentation = { package = "sokobanitron-presentation", path = "../sokobanitron-presentation" }
sokobanitron-gameplay = { path = "../sokobanitron-gameplay" }
sokobanitron-app = { path = "../sokobanitron-app" }
sokobanitron-core = { path = "../sokobanitron-core" }
