[package]
name = "sokobanitron-android-jni"
version = "0.1.0"
edition = "2024"

[lib]
name = "sokobanitron_android_jni"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21"
sokobanitron-app = { path = "../sokobanitron-app" }
sokobanitron-gameplay = { path = "../sokobanitron-gameplay" }
sokobanitron-level-editor = { path = "../sokobanitron-level-editor" }
