[package]
name = "sokobanitron-app"
version = "0.1.0"
edition = "2024"

[dependencies]
presentation = { package = "sokobanitron-presentation", path = "../sokobanitron-presentation" }
sokobanitron-level-editor = { path = "../sokobanitron-level-editor" }
sokobanitron-gameplay = { path = "../sokobanitron-gameplay" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
