[package]
name = "sokobanitron-app"
version = "0.1.0"
edition = "2024"

[dependencies]
presentation = { package = "sokobanitron-presentation", path = "../sokobanitron-presentation" }
sokobanitron-level-editor = { path = "../sokobanitron-level-editor" }
sokobanitron-core = { path = "../sokobanitron-core" }
sokobanitron-gameplay = { path = "../sokobanitron-gameplay" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.38"
time = { version = "0.3", features = ["formatting", "macros"] }
