[package]
name = "sokobanitron-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.9"

[dev-dependencies]
criterion = "0.8.2"
rusqlite = "0.38.0"

[features]
stage-profile = []

[[bench]]
name = "canonical_pipeline"
harness = false

[[bench]]
name = "pathfinder"
harness = false

[[bench]]
name = "box_pathfinder"
harness = false
