[package]
name = "sokobanitron-renderer"
version = "0.1.0"
edition = "2024"

[lib]
name = "renderer"

[dependencies]
font8x8 = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = { version = "0.45", default-features = false }
sokobanitron-gameplay = { path = "../sokobanitron-gameplay" }
sokobanitron-level-editor = { path = "../sokobanitron-level-editor" }
